@@ -38,6 +38,8 @@
 <p>2016-03-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/effect.c (BlurImage): Fix Coverity issue 124520
+&quot;Dereference after null check&quot;.</li>
 <li>coders/pdb.c (WritePDBImage): Fix SourceForge bug #360
 &quot;out-of-bounds read in utilities/gm+0x80fcc71) (PDB reader)&quot;.</li>
 <li>coders/meta.c (convertHTMLcodes): Fix SourceForge bug #373
