@@ -1,5 +1,8 @@
 2016-03-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/effect.c (BlurImage): Fix Coverity issue 124520
+	"Dereference after null check".
+
 	* coders/pdb.c (WritePDBImage): Fix SourceForge bug #360
 	"out-of-bounds read in utilities/gm+0x80fcc71) (PDB reader)".
 
